@@ -33,6 +33,7 @@ NEWS
   * Allow mod_mysql_vhost to use stored procedures (fixes #2011, thx Ben Brown)
   * Fix ipv6 in mod_proxy (fixes #2043)
   * Print errors from include_shell to stderr
+  * Set tm.tm_isdst = 0 before mktime() (fixes #2047)
 
 - 1.4.23 - 2009-06-19
   * Added some extra warning options in cmake and fix the resulting warnings (unused/static functions)
